Overflow layout shift fix from Tim Vereecke https://twitter.com/TimVereecke/status/1239454788116533248

--- a/_includes/index.css
+++ b/_includes/index.css
@@ -13,6 +13,9 @@
 * {
 	box-sizing: border-box;
 }
+html{
+	overflow-y: scroll;
+}
 body {
 	font-family: system-ui, -apple-system, sans-serif;
 	color: #222;
